cahnged hero color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<title>Naturae| Find the time to find yourself</title>
 	</head>
 	<body>
-		<header class="header">Some text...</header>
+		<header class="header">
+			<div class="logo-box">
+				<img src="images/logo-white.png" alt="logo" />
+			</div>
+		</header>
 	</body>
 </html>
