--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 	</head>
 	<body>
 		<header class="header">
-			<div class="logo-box">
-				<img src="images/logo-white.png" alt="logo" />
+			<div class="text-box">
+				<h1 class="heading-primary">
+					<span class="heading-primary-main"> Naturae</span>
+					<span class="heading-primary-sub"> Find the time to find yourself </span>
+				</h1>
 			</div>
 		</header>
 	</body>
