--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<span class="heading-primary-main"> Naturae</span>
 					<span class="heading-primary-sub"> Find the time to find yourself </span>
 				</h1>
+				<a href="#" class="btn btn-white">Start Your Escape</a>
 			</div>
 		</header>
 	</body>
